Closed Bug 1738400 Opened 3 years ago Closed 3 years ago

Fix -Wshadow-field-in-constructor-modified warning in js/src/vm/SavedStacks.cpp

Categories

(Core :: JavaScript Engine, defect, P3)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr78 --- wontfix
firefox-esr91 --- wontfix
firefox93 --- wontfix
firefox94 --- wontfix
firefox95 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1247299 added a column member variable reduce differential testing false positives, but the SavedFrame::Lookup constructor inadvertently sets the constructor's column parameter = 0, not the column member variable.

js/src/vm/SavedStacks.cpp:198:14 [-Wshadow-field-in-constructor-modified] modifying constructor parameter 'column' that shadows a field of 'js::SavedFrame::Lookup'

Bug 1247299 added a column member variable reduce differential testing false positives, but the SavedFrame::Lookup constructor inadvertently sets the constructor's column parameter = 0, not the column member variable.

js/src/vm/SavedStacks.cpp:198:14 [-Wshadow-field-in-constructor-modified] modifying constructor parameter 'column' that shadows a field of 'js::SavedFrame::Lookup'

Pushed by sfink@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f398c3d4e213
Fix -Wshadow-field-in-constructor-modified warning in js/src/vm/SavedStacks.cpp. r=sfink
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: