Bug 1738400 - Fix -Wshadow-field-in-constructor-modified warning in js/src/vm/SavedStacks.cpp. r=sfink

Bug 1247299 added a `column` member variable reduce differential testing false positives, but the SavedFrame::Lookup constructor inadvertently sets the constructor's `column` parameter = 0, not the `column` member variable.

js/src/vm/SavedStacks.cpp:198:14 [-Wshadow-field-in-constructor-modified] modifying constructor parameter 'column' that shadows a field of 'js::SavedFrame::Lookup'

Differential Revision: https://phabricator.services.mozilla.com/D129900